--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,16 @@ body {
 
 header {
     display: flex;
-    justify-content: center;
     padding-top: 25px;
     margin-bottom: -25px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
 input {
-    width: 50%;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     margin-right: 10px;
@@ -80,7 +82,7 @@ ul {
 .currentForecast {
     display: flex;
     width: 1660px;
-    height: 600px;
+    height:400px;
     background-color: rgb(63, 63, 63);
     margin-right: auto;
     margin-left: auto;
@@ -102,9 +104,10 @@ ul {
 
 .fiveDay {
     display: flex;
+    flex-direction: column;
     background-color: rgb(63, 63, 63);
     flex: 1 1;
-    min-height: 600px;
+    min-height: 400px;
     margin: 20px;
     border-radius: 10px;
     color: white;
