--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,12 +54,12 @@ h4 {
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 6px;
     width: 90%;
     color: white;
     justify-content: center;
     font-size: 1.3em;
-    padding-top: 15px;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .previousSearch p {
@@ -71,12 +71,8 @@ h4 {
     font-size: 1em;     
     padding-left: 20px;
     padding-right: 20px;
-    min-height: 60px;
-}
-
-ul {
-    display: flex;
-    flex-wrap: wrap;
+    height: 50px;
+    min-height: 50px;
 }
 
 .currentForecast {
