--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h4 {
     height: auto;
     min-height: 70px;
     background-color: rgb(63, 63, 63);
-    border-radius: 10px;
+    border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
     width: 90%;
@@ -77,16 +77,18 @@ h4 {
 
 .currentForecast {
     display: flex;
+    flex-direction: column;
     width: 1660px;
     height:400px;
     background-color: rgb(63, 63, 63);
     margin-right: auto;
     margin-left: auto;
     margin-top: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     width: 90%;
     color: white;
     justify-content: center;
+    text-align: center;
     font-size: 1.3em;
 }
 
@@ -105,9 +107,10 @@ h4 {
     flex: 1 1;
     min-height: 400px;
     margin: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     color: white;
     text-align: center;
     font-size: 1.3em;
     justify-content: center;
+    padding: 10px;
 }
