--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,12 @@ h4 {
     font-size: 1.3em;
 }
 
+#icon {
+    min-width: 200px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .fiveDayForecast {
     display: flex;
     margin-right: auto;
@@ -104,7 +110,7 @@ h4 {
     display: flex;
     flex-direction: column;
     background-color: rgb(63, 63, 63);
-    flex: 1 1;
+    flex: 1;
     min-height: 400px;
     margin: 20px;
     border-radius: 5px;
