--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,8 @@ h4 {
     display: flex;
     flex-direction: column;
     width: 1660px;
-    height:400px;
+    height: auto;
+    min-height: 400px;
     background-color: rgb(63, 63, 63);
     margin-right: auto;
     margin-left: auto;
@@ -90,12 +91,24 @@ h4 {
     justify-content: center;
     text-align: center;
     font-size: 1.3em;
+    padding: 10px;
 }
 
 #icon {
     min-width: 200px;
     margin-right: auto;
     margin-left: auto;
+}
+
+#uv {
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 7px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .fiveDayForecast {
