--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,13 +98,17 @@ h4 {
     text-align: center;
     font-size: 1.3em;
     padding: 10px;
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
+    filter: drop-shadow(1px 20px 15px rgba(22, 22, 22, 0.3));
 }
 
 #icon {
     min-width: 200px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.iconClouds {
+    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.5));
 }
 
 #uv {
