--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*------------------- Global Settings ------------------*/
 * {
     margin: 0;
     padding: 0;
@@ -6,18 +7,24 @@
 body {
     background-color: rgb(44, 44, 44);
     width: 100%;
-    background-image: url(https://images.pexels.com/photos/1905054/pexels-photo-1905054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-    background-color: rgba(44, 44, 44, 0.4);
+    background-image: url(https://images.pexels.com/photos/6548285/pexels-photo-6548285.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-position: middle;
+    background-color: rgba(44, 44, 44, 0.1);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    padding-bottom: 50px;
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 
+/*-------------------- Header Settings -------------------*/
 .logoDiv {
     text-align: center;
     margin-top: -45px;
     margin-bottom: -10px;
+    font-size: 1.7em;
+    letter-spacing: -1px;
 }
 
 .fas {
@@ -31,6 +38,7 @@ header {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    max-width: 2048px;
 
 }
 
@@ -40,8 +48,10 @@ input {
     border-radius: 5px;
     margin-right: 10px;
     border-style: none;
-    font-size: 1.3em;
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
+    font-size: 1.7em;
+    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.1));
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: rgb(65, 65, 65);
 }
 
 button {
@@ -51,8 +61,24 @@ button {
     background-color: #007bff;
     color: white;
     border-style: none;
-    font-size: 1.3em;
-    padding-bottom: 3px;
+    font-size: 1.8em;
+    letter-spacing: -0.5px;
+    cursor: pointer;
+    font-family: 'Open Sans Condensed', sans-serif;
+    padding-bottom: 1px;
+}
+
+button:hover {
+    background-color: #2e90ff;
+}
+
+/*-------------------- Heading Settings --------------------*/
+
+h2 {
+    text-align: center;
+    color: white;
+    margin-top: 80px;
+    margin-bottom: 20px;
 }
 
 h3 {
@@ -60,14 +86,16 @@ h3 {
     color: white;
     margin-top: 80px;
     margin-bottom: 20px;
+    font-size: 2.5em;
 }
 
+/*--------------- Previous Search Div Settings --------------*/
 .previousSearch {
     display: flex;
     width: 1660px;
     height: auto;
     min-height: 70px;
-    background-color: rgba(36, 36, 36, 0.8);
+    background-color: rgba(36, 36, 36, 0.6);
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
@@ -79,11 +107,12 @@ h3 {
     font-size: 1.3em;
     align-items: center;
     flex-wrap: wrap;
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
+    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.2));
+    max-width: 2048px;
 }
 
 .searchButton {
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
+    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.1));
 }
 
 .previousSearch p {
@@ -97,6 +126,7 @@ h3 {
     padding-right: 20px;
     height: 50px;
     min-height: 50px;
+    font-size: 1.3em;
 }
 
 .clearDiv {
@@ -104,34 +134,58 @@ h3 {
     justify-content: center;
 }
 
-.clearButton {
-    height: 50px;
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
-    background-color: #dc3545;
+.fa-times {
+    color: white;
+    margin-left: 2px;
 }
+
+.clearButton {
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #dc3545;
+    color: white;
+    border-style: none;
+    height: 50px;
+    margin-right: 5px;
+    font-size: 1.5em;
+}
+
+.clearButton:hover {
+    background-color: #df5260;
+}
+
+/*--------------- Current Foreast Div Settings --------------*/
 
 .currentForecast {
     display: flex;
-    flex-direction: column;
     width: 1660px;
+    max-width: 2048px;
+    flex-wrap: wrap;
     height: auto;
     min-height: 400px;
-    background-color: rgba(36, 36, 36, 0.8);
+    background-color: rgba(36, 36, 36, 0.6);
     margin-right: auto;
     margin-left: auto;
     margin-top: 10px;
     border-radius: 5px;
     width: 90%;
     color: white;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     text-align: center;
-    font-size: 1.3em;
+    font-size: 2.5em;
     padding: 10px;
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
+    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.2));
+    line-height: 65px;
+}
+
+.currentDivOne, .currentDivTwo, .currentDivThree {
+    min-width: 300px;
 }
 
 #icon {
-    min-width: 200px;
+    min-width: 300px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -143,13 +197,14 @@ h3 {
 #uv {
     margin-left: auto;
     margin-right: auto;
-    width: 150px;
+    width: 275px;
     border-radius: 5px;
     margin-top: 10px;
     margin-bottom: 7px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    line-height: 53px;
 }
+
+/*--------------- Five Day Forecast Div Settings --------------*/
 
 .fiveDayForecast {
     display: flex;
@@ -158,12 +213,13 @@ h3 {
     margin-left: auto;
     width: 91%;
     margin-top: -17px;
+    max-width: 2048px;
 }
 
 .fiveDay {
     display: flex;
     flex-direction: column;
-    background-color: rgba(36, 36, 36, 0.8);
+    background-color: rgba(36, 36, 36, 0.6);
     flex: 1;
     min-height: 400px;
     min-width: 250px;
@@ -173,8 +229,9 @@ h3 {
     border-radius: 5px;
     color: white;
     text-align: center;
-    font-size: 1.3em;
+    font-size: 2.5em;
     justify-content: center;
     padding: 10px;
-    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.3));
+    filter: drop-shadow(1px 15px 5px rgba(22, 22, 22, 0.2));
+    line-height: 65px;
 }
